# Delegomation

./: README.md  pyproject.toml  start.py
automation_scripts/common/: db.py  driver.py  envConfig.py  logger.py
automation_scripts/cutshort/: __main__.py
automation_scripts/instahyre/: __init__.py  __main__.py  scrapper.py
automation_scripts/naukri/: __main__.py
automation_scripts/workday/: __main__.py
configs/: __init__.py  instahyre.py
